--- a/angularapp/src/app/component/admin/admin.component.css
+++ b/angularapp/src/app/component/admin/admin.component.css
@@ -1,41 +1,88 @@
-*{
-    text-decoration: none;
-}
-.navbar{
-    background: crimson; font-family: calibri; padding-right: 15px;padding-left: 15px;
-}
-.navdiv{
-    display: flex; align-items: center; justify-content: space-between;
-}
-.logo a{
-    font-size: 35px; font-weight: 600; color: white;
-}
-li{
-    list-style: none; display: inline-block;
-}a{
+a {
     color: white;
     font-size: 1.5rem;
-
 }
 
-a:hover{
-    color:white;
+a:hover {
+    color: white;
 }
 
 .navbar-brand {
     color: white;
     font-size: 2.0rem;
     margin-right: 8rem;
-  
+
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+
+}
+
+.dropbtn {
+    font-size: 1.5rem;
+    color: white;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    margin-left: -140px;
+    display: none;
+    position: absolute;
+    border-radius: 20px;
+    background-color: #f9f9f9;
+    min-width: 260px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    color: gray;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.show {
+    display: block;
+}
+
+.dropdown-content img {
+        margin-top: 100px;
+        display: block;
+        margin: 0 auto;
+    border-radius: 50%;
+}
+
+input[type="password"],
+input[type="tel"],
+input[type="text"],
+input[type="email"] {
+    display: block;
+    margin: 0 auto;
+    margin-top: 10px;
+    width: 90%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+h6,button[type="submit"]{
+    margin-left: 10px;
+}
+.button-container {
+    display: flex;
+    gap: 10px;
+    margin: 10px;
+    
   }
 
-li a{
-    color: white; font-size: 18px; font-weight: bold; margin-right: 25px;
-}
-button{
-    background-color: black; margin-left: 10px; border-radius: 10px; padding: 10px; width: 90px;
-}
-button a{
-    color: white; font-weight: bold; font-size: 15px;
-}
-
+  
