--- a/angularapp/src/app/component/user/appointment/appointment.component.css
+++ b/angularapp/src/app/component/user/appointment/appointment.component.css
@@ -1,29 +1,23 @@
 body{
-  background-color: lightblue;
+  background-image: url('https://wallpaperaccess.com/full/7233921.jpg');
+  padding-bottom: 11%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 400px;
   display: flex;
-  justify-content: center;
   align-items: center;
-  padding-bottom: 355px;
+  justify-content: center;
 }
 
-.bgcolor {
-  padding: 20px;
-  background-color: lightblue;
-}
+
 
 .container {
   max-width: 800px;
   margin: 0 auto;
 }
 
-.alert {
-  background-color: #f8d7da;
-  color: #721c24;
-  padding: 20px;
-  margin-bottom: 20px;
-  border: 1px solid #f5c6cb;
-  border-radius: 4px;
-}
 
 table {
   width: 100%;
@@ -129,6 +123,3 @@ form {
   background-color: azure;
   border-radius: 20px;
 }
-
-
-
